Add headlines to main page and input images

--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,9 +1,9 @@
 <div class='container'>
   <nav class='navbar navbar-default' role='navigation'>
     <ul class='nav navbar-nav'>
-      <li>{{#link-to 'entertainment'}}Entertainment{{/link-to}}</li>
-      <li>{{#link-to 'crime'}}Crime{{/link-to}}</li>
-      <li>{{#link-to 'kardashians'}}Kardashians{{/link-to}}</li>
+      <li>{{#link-to ''}}Entertainment{{/link-to}}</li>
+      <li>{{#link-to ''}}Crime{{/link-to}}</li>
+      <li>{{#link-to ''}}Kardashians{{/link-to}}</li>
     </ul>
   </nav>
 
