Add routes and pages for the headlines on the main page

--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -1,6 +1,7 @@
 <div class='container'>
   <nav class='navbar navbar-default' role='navigation'>
     <ul class='nav navbar-nav'>
+      <li>{{#link-to 'headlines'}}Home{{/link-to}}</li>
       <li>{{#link-to ''}}Entertainment{{/link-to}}</li>
       <li>{{#link-to ''}}Crime{{/link-to}}</li>
       <li>{{#link-to ''}}Kardashians{{/link-to}}</li>
