--- a/templates/headlines.hbs
+++ b/templates/headlines.hbs
@@ -1,25 +1,25 @@
 <h1>HEADLINES</h1>
 
 <br>
-<a href="#">
+{{#link-to 'manBun'}}
   <img src="http://www.worn.cz/public/files/092/146198-tumblr_n3811fzz1Z1rssouco1_500.jpg" style="width:304px;height:228px">
   <br>
-<h2>Tyler grows hair out and rocks a solid man-bun. All women very impressed and attracted.</a></h2>
+<h2>Tyler grows hair out and rocks a solid man-bun. All women very impressed and attracted.</h2>{{/link-to}}
 
 <br>
-<a href="#">
+{{#link-to 'facialHair'}}
   <img src="http://entertainment.ie/images_content/JTRO_BEARD1(2).jpg" style="width:304px;height:228px">
   <br>
-<h2>Bad facial hair in style? Not at all, experts say.</a></h2>
+<h2>Bad facial hair in style? Not at all, experts say.</h2>{{/link-to}}
 <br>
 
-<a href="#">
+{{#link-to 'hip'}}
   <img src="http://www.hotelchatter.com/files/admin/portlandhood.jpg" style="width:304px;height:228px">
   <br>
-<h2>BREAKING NEWS: Portland is hip, hipsters finally say.</a></h2>
+<h2>BREAKING NEWS: Portland is hip, hipsters finally say.</h2>{{/link-to}}
 <br>
 
-<a href="#">
+{{#link-to 'granola'}}
   <img src="http://cgrapechef.com/wp-content/uploads/FruitGranolaYogurtParfait.png" style="width:304px;height:228px">
   <br>
-<h2>13 different ways to eat organic granola. Number 7 may surprise you!</a></h2>
+<h2>13 different ways to eat organic granola. Number 7 may surprise you!</h2>{{/link-to}}
