Put social media links on the right of the nav bar and add dropdown menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,17 @@
 }
 
 .carouselWrap {
-  margin-left: auto;
+  margin-left: 40%;
   margin-right: auto;
+  padding-top: 40px;
+}
+
+.socialButtons {
+  float: right;
+  padding-right: 6px;
+}
+
+.socialLinks {
+  float: right;
+  padding-right: 35px;
 }
