--- a/templates/headlines.hbs
+++ b/templates/headlines.hbs
@@ -23,7 +23,7 @@
 {{#link-to 'hip'}}
   <img src="img/hip.jpg" style="width:304px;height:228px">
   <br>
-<h2>BREAKING NEWS: Portland is hip, hipsters finally say.</h2>{{/link-to}}
+<h2>BREAKING NEWS: Portland is hip, hipsters finally admit.</h2>{{/link-to}}
 <br>
 
 {{#link-to 'granola'}}
