--- a/templates/application.hbs
+++ b/templates/application.hbs
@@ -6,7 +6,24 @@
       <li>{{#link-to ''}}Crime{{/link-to}}</li>
       <li>{{#link-to ''}}Kardashians{{/link-to}}</li>
     </ul>
+
+    <div class='socialButtons' {{action 'toggleMenu' on="mouseEnter"}}>
+      <img src="img/hamburger.png">
+      <img src="img/kitty.gif">
+      <img src="img/sushi.gif">
+    </div>
   </nav>
+
+
+  {{#if showMenu}}
+  <div class="socialLinks">
+    <ul>
+      <li>Burgerzone</li>
+      <li>Kittygram</li>
+      <li>Sushibook</li>
+    </ul>
+  </div>
+  {{/if}}
 
   {{outlet}}
 </div>
