--- a/css/styles.css
+++ b/css/styles.css
@@ -17,4 +17,19 @@
 .socialLinks {
   float: right;
   padding-right: 35px;
+  padding-top: 8px;
+  border-radius: 4px;
+  border: 1px solid;
+  border-color: #e7e7e7;
+  background-color: #f8f8f8;
+  font-size: 10px;
+
+}
+
+.navbar {
+  margin-bottom: 0px;
+}
+
+ul {
+  list-style-type: none;
 }
